test_suite/tests/ui/remote/wrong_de.stderr
error[E0308]: mismatched types
 --> $DIR/wrong_de.rs:7:10
  |
7 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^
  |          |
  |          expected `u16`, found `u8`
  |          help: you can convert an `u8` to `u16`: `Deserialize.into()`
